class Recipe {
  final int id;
  final String title;
  final String url;
  final List<String> ingredients;
  final List<String> instructions;
  final String duration;

  Recipe({
    required this.id,
    required this.title,
    required this.url,
    required this.ingredients,
    required this.instructions,
    required this.duration
});



}